removi precio y purchase en cards de productos de pagina index

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="ambos__primerafila__container">
                     <img class="img-preview" src="assets/img/Productos/Producto 1.jpg" alt="Muestra de producto ambo para medico o enfermero">
                     <p class="texto__productos"><strong>CONJUNTO MONOCROME</strong></p>
-                    <p class="texto__productos">$ 15.000</p>
+                    <p class="precio__productos">$ 15.000</p>
                     <p class="texto__productos"><a class="enlace" href="">LO QUIERO</a></p>
                     <p class="notificacion notificacion-1">NUEVO</p>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="ambos__primerafila__container">
                     <img class="img-preview" src="assets/img/Productos/Producto 2.jpg" alt="Muestra de producto ambo para medico o enfermero">
                     <p class="texto__productos"><strong>CONJUNTO MILITARY GREEN</strong></p>
-                    <p class="texto__productos">$ 15.000</p>
+                    <p class="precio__productos">$ 15.000</p>
                     <p class="texto__productos"><a class="enlace" href="">LO QUIERO</a></p>
                     <p class="notificacion">NUEVO</p>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="ambos__primerafila__container">
                     <img class="img-preview" src="assets/img/Productos/Producto 3.jpg" alt="Muestra de producto ambo para medico o enfermero">
                     <p class="texto__productos"><strong>CONJUNTO GREEN CLASSIC</strong></p>
-                    <p class="texto__productos">$ 15.000</p>
+                    <p class="precio__productos">$ 15.000</p>
                     <p class="texto__productos"><a class="enlace" href="">LO QUIERO</a></p>
                     <p class="notificacion">NUEVO</p>
                 </div> 
