removi ofertas del navbar en index y modifique el nombre de productos por catalogo

--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
                                 <a class="nav-link text-light menu__item" aria-current="page" href="acercade.html">SOBRE NOSOTROS</a>
                             </li>
                             <li class="nav-item menu__item">
-                                <a class="nav-link text-light menu__item" href="productos.html">PRODUCTOS</a>
-                            </li>
-                            <li class="nav-item menu__item">
-                                <a class="nav-link text-light menu__item" href="ofertas.html">OFERTAS</a>
+                                <a class="nav-link text-light menu__item" href="productos.html">CATALOGO</a>
                             </li>
                             <li class="nav-item menu__item">
                                 <a class="nav-link text-light menu__item" href="locales.html">NUESTROS LOCALES</a>
