agregue imagenes al gallery wrap

--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@
 
             <div class="gallery-wrapper">
                 <figure class="gallery-item">
-                    <img class="item-image" src="" alt="" srcset="">
+                    <img class="item-image" src="./assets/img/Wrap/Gallery Wrap 1.jpg" alt="" srcset="">
                     <figcaption class="item-description">
-                        <h2 class="name">Catalogo</h2>
+                        <h3 class="name">Guardapolvos</h3>
                         <span class="role">Ambos Classsic</span>
                     </figcaption>
                 </figure>
 
                 <figure class="gallery-item">
-                    <img class="item-image" src="" alt="" srcset="">
+                    <img class="item-image" src="./assets/img/Wrap/Galerry Wrap 2.jpg" alt="" srcset="">
                     <figcaption class="item-description">
-                        <h2 class="name">Catalogo</h2>
+                        <h3 class="name">Linea Custom</h3>
                         <span class="role">Ambos Classsic</span>
                     </figcaption>
                 </figure>
 
                 <figure class="gallery-item">
-                    <img class="item-image" src="" alt="" srcset="">
+                    <img class="item-image" src="./assets/img/Wrap/Gallery Wrap 3.jpg" alt="" srcset="">
                     <figcaption class="item-description">
-                        <h2 class="name">Catalogo</h2>
+                        <h3 class="name">Linea Classic</h3>
                         <span class="role">Ambos Classsic</span>
                     </figcaption>
                 </figure>
